# Bdays

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql.yml
src/: Bday.h  Birthdays.cpp  Birthdays.h  configToBday.cpp  configToBday.h  getConfigPath.cpp  getConfigPath.h  printTable.cpp  printTable.h  readConfig.cpp  readConfig.h
